Fixed project modal  overlap in tablet

--- a/SCSS/_works.scss
+++ b/SCSS/_works.scss
@@ -498,7 +498,7 @@ background-size: 100% 100%;
     // border: 1px solid rgba(255, 255, 255, 0.25);
     color: white;
     margin: 10px;
-    padding: 10px 55px;
+    padding: 10px 15px;
     border-radius: 15px;
 
     display: flex;
@@ -514,7 +514,8 @@ background-size: 100% 100%;
         align-items: center;
         justify-content: center;
         // width: 90%;
-        height: 70%;
+        // height: 70%;
+        // min-height: 99%;
     }
     h1{
         margin-top: 10px;
@@ -532,6 +533,9 @@ background-size: 100% 100%;
       text-align: start;
       font-weight: 500;
       margin-top: 5px;
+    }
+    .child-list-item{
+        margin-left: 5px;
     }
 
 }
