--- a/SCSS/main.css
+++ b/SCSS/main.css
@@ -653,7 +653,7 @@ h3 {
   background-color: rgba(13, 13, 13, 0.6);
   color: white;
   margin: 10px;
-  padding: 10px 55px;
+  padding: 10px 15px;
   border-radius: 15px;
   display: flex;
   flex-direction: column;
@@ -666,7 +666,6 @@ h3 {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 70%;
 }
 .tile h1 {
   margin-top: 10px;
@@ -682,6 +681,9 @@ h3 {
   text-align: start;
   font-weight: 500;
   margin-top: 5px;
+}
+.tile .child-list-item {
+  margin-left: 5px;
 }
 
 .overview {
